--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,3 @@
-
-
-
-
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -21,11 +17,18 @@
     <%= f.label :gender %><br />
     <%= f.select :gender, options_for_select([['Male', 'male'], ['Female', 'female'], ['Other', 'other']]) %>
   </div>
+ <% if request.host.split('.').first && valid_subdomain?(request.host.split('.').first) %>
+  
+    <div class="field">
+      <%= f.label :role %><br />
+      <%= f.select :role, options_for_select([['Admin', 'admin'], ['Doctor', 'doctor'], ['Patient', 'patient'], ['Nurse', 'nurse'], ['Staff', 'staff']]) %>
+    </div>
+  <% else %>
 
-  <div class="field">
-    <%= f.label :role %><br />
-    <%= f.select :role, options_for_select([['Owner', 'owner'], ['Admin', 'admin'], ['Doctor', 'doctor'], ['Patient', 'patient'], ['Nurse', 'nurse'], ['Staff', 'staff']]) %>
-  </div>
+    <div class="field">
+      <%= f.hidden_field :role, value: 'owner' %>
+    </div>
+  <% end %>
 
   <div class="field">
     <%= f.label :password %>
