--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,52 +1,57 @@
-<h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
+
+<div class="container d-flex justify-content-center mt-5">
+  <div class="col-md-6">
+    <h2 class="text-center mb-4 text-success display-4">Sign up</h2>
+
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-horizontal" }) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
+
+      <div class="form-group">
+        <%= f.label :name, class: "form-label" %>
+        <%= f.text_field :name, class: "form-control", autofocus: true %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :email, class: "form-label" %>
+        <%= f.email_field :email, class: "form-control", autocomplete: "email" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :gender, class: "form-label" %>
+        <%= f.select :gender, options_for_select([['Male', 'male'], ['Female', 'female'], ['Other', 'other']]), {}, class: "form-control" %>
+      </div>
+
+      <% if request.host.split('.').first && valid_subdomain?(request.host.split('.').first) %>
+        <div class="form-group">
+          <%= f.label :role, class: "form-label" %>
+          <%= f.select :role, options_for_select([['Admin', 'admin'], ['Doctor', 'doctor'], ['Patient', 'patient'], ['Nurse', 'nurse'], ['Staff', 'staff']]), {}, class: "form-control" %>
+        </div>
+      <% else %>
+        <%= f.hidden_field :role, value: 'owner' %>
+      <% end %>
+
+      <div class="form-group">
+        <%= f.label :password, class: "form-label" %>
+        <% if @minimum_password_length %>
+          <small class="form-text text-muted">
+            (<%= @minimum_password_length %> characters minimum)
+          </small>
+        <% end %>
+        <%= f.password_field :password, class: "form-control", autocomplete: "new-password" %>
+      </div>
+
+      <div class="form-group">
+        <%= f.label :password_confirmation, class: "form-label" %>
+        <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password" %>
+      </div>
+
+      <div class="form-group text-center">
+        <%= f.submit "Sign up", class: "btn btn-success btn-block mt-4" %>
+      </div>
+    <% end %>
+
+    <%= render "devise/shared/links" %>
   </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :gender %><br />
-    <%= f.select :gender, options_for_select([['Male', 'male'], ['Female', 'female'], ['Other', 'other']]) %>
-  </div>
- <% if request.host.split('.').first && valid_subdomain?(request.host.split('.').first) %>
-  
-    <div class="field">
-      <%= f.label :role %><br />
-      <%= f.select :role, options_for_select([['Admin', 'admin'], ['Doctor', 'doctor'], ['Patient', 'patient'], ['Nurse', 'nurse'], ['Staff', 'staff']]) %>
-    </div>
-  <% else %>
-
-    <div class="field">
-      <%= f.hidden_field :role, value: 'owner' %>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
-
+</div>
