--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,183 @@
-<h1>You are at the Dashboard of owner </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Medilab</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+  <!-- Navbar -->
+  <div class="navbar navbar-expand-lg navbar-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#">Medilab</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Departments</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Doctors</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Dropdown
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
+        <a href="#" class="btn btn-primary ml-3">Make an Appointment</a>
+      </div>
+    </div>
+  </div>
+  <!-- Hero Section -->
+  <div class="hero-section text-center">
+    <div class="container">
+      <h1>Welcome to HMS</h1>
+      <p>We are a team of talented designers making websites with Bootstrap</p>
+    </div>
+  <!-- Feature Section -->
+  <div class="container py-5">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card p-4 bg-primary text-white">
+          <h5>Why Choose Medilab?</h5>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <a href="#" class="btn btn-outline-light">Learn More</a>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card p-4 text-center">
+          <img src="path_to_icon" alt="Icon" class="mb-3">
+          <h5>Corporis voluptates officia eiusmod</h5>
+          <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip.</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card p-4 text-center">
+          <img src="path_to_icon" alt="Icon" class="mb-3">
+          <h5>Ullamco laboris ladore pan</h5>
+          <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt.</p>
+        </div>
+      </div>
+      <div class="col-md-4 mt-4">
+        <div class="card p-4 text-center">
+          <img src="path_to_icon" alt="Icon" class="mb-3">
+          <h5>Labore consequatur incidid dolore</h5>
+          <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+    </div>
+  <%# ABOUT US SECTION %>
+  <div class="container  py-5">
+  <div class="row">
+    <div class="col-md-6 about-us">
+    </div>
+    <div class="col-md-6">
+      <h2>About Us</h2>
+      <p>Dolor iure expedita id fuga asperiores qui sunt consequatur minima. Quidem voluptas deleniti. Sit quia molestiae quia quas qui magnam itaque veritatis dolores. Corrupti totam ut eius incidunt reiciendis veritatis asperiores placeat.</p>
+      <div class="media mb-3">
+        <i class="fas fa-vials media-icon"></i>
+        <div class="media-body">
+          <h5>Ullamco laboris nisi ut aliquip consequat</h5>
+          <p>Magni facilis facilis repellendus cum excepturi quaerat praesentium libre trade</p>
+        </div>
+      </div>
+      <div class="media mb-3">
+        <i class="fas fa-hand-holding-medical media-icon"></i>
+        <div class="media-body">
+          <h5>Magnam soluta odio exercitationem reprehenderi</h5>
+          <p>Quo totam dolorum at pariatur aut distinctio dolorem laudantium illo direna pasata redi</p>
+        </div>
+      </div>
+      <div class="media">
+        <i class="fas fa-heartbeat media-icon"></i>
+        <div class="media-body">
+          <h5>Voluptatem et qui exercitationem</h5>
+          <p>Et velit et eos maiores est tempora et quos dolorem autem tempora incidunt maxime veniam</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<%# Footer %>
+<div class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <h4>Medilab</h4>
+        <p>
+          A108 Adam Street <br>
+          New York, NY 535022<br>
+          <strong>Phone:</strong> +1 5589 55488 55<br>
+          <strong>Email:</strong> info@example.com<br>
+        </p>
+        <div class="social-icons">
+          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <h4>Useful Links</h4>
+        <ul class="list-unstyled">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Terms of service</a></li>
+          <li><a href="#">Privacy policy</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3">
+        <h4>Our Services</h4>
+        <ul class="list-unstyled">
+          <li><a href="#">Web Design</a></li>
+          <li><a href="#">Web Development</a></li>
+          <li><a href="#">Product Management</a></li>
+          <li><a href="#">Marketing</a></li>
+          <li><a href="#">Graphic Design</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3">
+        <h4>Hic solutasetp</h4>
+        <ul class="list-unstyled">
+          <li><a href="#">Molestiae accusamus iure</a></li>
+          <li><a href="#">Excepturi dignissimos</a></li>
+          <li><a href="#">Suscipit distinctio</a></li>
+          <li><a href="#">Dilecta</a></li>
+          <li><a href="#">Sit quas consectetur</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="text-center py-4">
+    &copy; Copyright <strong>Medilab</strong>. All Rights Reserved<br>
+    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+  </div>
+</div>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
+</html>
