--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,57 +1,74 @@
 
 
 
-<div class="container d-flex justify-content-center mt-5">
-  <div class="col-md-6">
-    <h2 class="text-center mb-4 text-success display-4">Sign up</h2>
+<div class="container d-flex justify-content-center mt-5 mb-5">
+  <div class="col-md-8 col-lg-6">
+    <div class="bg-white p-4 rounded shadow-sm">
+      <h2 class="text-center mb-4 text-success display-4">Sign up</h2>
 
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-horizontal" }) do |f| %>
-      <%= render "devise/shared/error_messages", resource: resource %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-horizontal" }) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-      <div class="form-group">
-        <%= f.label :name, class: "form-label" %>
-        <%= f.text_field :name, class: "form-control", autofocus: true %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :email, class: "form-label" %>
-        <%= f.email_field :email, class: "form-control", autocomplete: "email" %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :gender, class: "form-label" %>
-        <%= f.select :gender, options_for_select([['Male', 'male'], ['Female', 'female'], ['Other', 'other']]), {}, class: "form-control" %>
-      </div>
-
-      <% if request.host.split('.').first && valid_subdomain?(request.host.split('.').first) %>
         <div class="form-group">
-          <%= f.label :role, class: "form-label" %>
-          <%= f.select :role, options_for_select([['Admin', 'admin'], ['Doctor', 'doctor'], ['Patient', 'patient'], ['Nurse', 'nurse'], ['Staff', 'staff']]), {}, class: "form-control" %>
+          <%= f.label :name, class: "form-label" %>
+          <%= f.text_field :name, class: "form-control", autofocus: true %>
         </div>
-      <% else %>
+
+        <div class="form-group">
+          <%= f.label :email, class: "form-label" %>
+          <%= f.email_field :email, class: "form-control", autocomplete: "email" %>
+        </div>
+
+
+        <div class="form-group">
+          <%= f.label :password ,class: "form-label"%> 
+          <%= f.password_field :password, class: "form-control",  autocomplete: "new-password" %>
+          <% if @minimum_password_length %>
+            <br />
+            <em><%= @minimum_password_length %> characters minimum</em>
+          <% end %>
+        </div>
+
+      <div class="form-group">
+        <%= f.label :password_confirmation , class: "form-label" %><br />
+        <%= f.password_field :password_confirmation, class: "form-control",  autocomplete: "new-password" %>
+      </div>
+
+        <div class="form-group">
+          <%= f.label :gender, class: "form-label" %>
+          <%= f.select :gender, options_for_select([['Male', 'male'], ['Female', 'female'], ['Other', 'other']]), {}, class: "form-control" %>
+        </div>
+
         <%= f.hidden_field :role, value: 'owner' %>
+
+        <h3 class="text-center mb-4 mt-5 text-primary">Hospital Details</h3>
+
+        <div class="form-group">
+          <%= f.label :hospital_name, "Hospital Name", class: 'form-label' %>
+          <%= f.text_field :hospital_name, class: 'form-control', placeholder: 'Hospital Name', required: true %>
+        </div>
+
+        <div class="form-group mt-3">
+          <%= f.label :hospital_location, "Hospital Location", class: 'form-label' %>
+          <%= f.text_field :hospital_location, class: 'form-control', placeholder: 'Location', required: true %>
+        </div>
+
+        <div class="form-group mt-3">
+          <%= f.label :hospital_email, "Hospital Email", class: 'form-label' %>
+          <%= f.email_field :hospital_email, class: 'form-control', placeholder: 'Email', required: true %>
+        </div>
+
+        <div class="form-group mt-3">
+          <%= f.label :license_no, class: 'form-label' %>
+          <%= f.text_field :license_no, class: 'form-control', placeholder: 'License Number', required: true %>
+        </div>
+
+        <div class="form-group mt-5 text-center">
+          <%= f.submit "Sign up & Create Hospital", class: "btn btn-success btn-block mt-4" %>
+        </div>
       <% end %>
 
-      <div class="form-group">
-        <%= f.label :password, class: "form-label" %>
-        <% if @minimum_password_length %>
-          <small class="form-text text-muted">
-            (<%= @minimum_password_length %> characters minimum)
-          </small>
-        <% end %>
-        <%= f.password_field :password, class: "form-control", autocomplete: "new-password" %>
-      </div>
-
-      <div class="form-group">
-        <%= f.label :password_confirmation, class: "form-label" %>
-        <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password" %>
-      </div>
-
-      <div class="form-group text-center">
-        <%= f.submit "Sign up", class: "btn btn-success btn-block mt-4" %>
-      </div>
-    <% end %>
-
-    <%= render "devise/shared/links" %>
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
 </div>
