--- a/app/views/hospitals/index.html.erb
+++ b/app/views/hospitals/index.html.erb
@@ -1,11 +1,9 @@
 <div class="container d-flex flex-row align-items-center justify-content-between my-4 w-100">
   <h1 class="text-center mb-4 text-primary">Dashboard of Owner</h1>
   <div class="text-center mb-4">
-    <%= link_to 'Create New Hospital', new_hospital_url, class: 'btn btn-primary btn-lg' %>
+    <%= link_to 'Create New Hospital', new_user_registration_path, class: 'btn btn-primary btn-lg' %>
   </div>
 </div>
-
-<%= button_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'text-danger' %>
 
 
 
@@ -33,17 +31,17 @@
                 <td><%= hospital.email %></td>
                 <td><%= hospital.license_no %></td>
                 <td class="">
-                  <%= link_to "http://#{hospital.slug}.localhost:3000", class: 'btn btn-primary btn-sm me-2', target: '_blank', rel: 'noopener noreferrer' do %>
-                    <i class="bi bi-house-door"></i> 
+                  <%= link_to "http://#{hospital.subdomain}.localhost:3000/users/sign_in", class: 'btn btn-primary btn-sm me-2', rel: 'noopener noreferrer' do %>
+                    Go to hospital
                   <% end %>
 
-                  <%= link_to edit_hospital_path(hospital), class: 'btn btn-success btn-sm me-2 ' do %>
-                    <i class="bi bi-pencil"></i> 
-                  <% end %>
+                  <%# <%= link_to edit_hospital_path(hospital), class: 'btn btn-success btn-sm me-2 ' do %> 
+                    <%# <i class="bi bi-pencil"></i>  %>
+                  <%# <% end %> 
 
-                  <%= button_to hospital, method: :delete, data: { confirm: 'Are you sure you want to delete this hospital?' }, class: 'btn btn-danger btn-sm ' do %>
-                    <i class="bi bi-trash"></i> 
-                  <% end %>
+                  <%# <%= button_to hospital, method: :delete, data: { confirm: 'Are you sure you want to delete this hospital?' }, class: 'btn btn-danger btn-sm ' do %> 
+                    <%# <i class="bi bi-trash"></i>  %>
+                  <%# <% end %> 
                 </td>
 
               </tr>
