Owmer can perform CRUD on ADMIN and STAFF , Devise routes re-arranged

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -64,3 +64,19 @@ font-weight: bold;
   margin-right: 10px;
   color: #6C757D;
 }
+
+
+
+.sticky-sidebar {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  height: 100vh;
+  overflow-y: auto; /* Ensures the sidebar is scrollable if content overflows */
+}
+
+.main-content {
+  overflow-y: auto;
+  height: 100vh;
+  padding-left: 1rem;
+}
