--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,6 +1,6 @@
 
-<div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-primary">
-    <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+<div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-primary ">
+  <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100 position-sticky top-0 bottom-0">
         <a href="/" class="d-flex align-items-center pt-3 pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
                 <%= ActsAsTenant.current_tenant.name %>
         </a>
@@ -30,18 +30,14 @@
                     <li class="w-100">
                         
                         <%= link_to users_path , class: "nav-link px-4 text-white"  do %>
-                            <span class="d-none d-sm-inline">Admins</span>
+                            <span class="d-none d-sm-inline">Staff</span>
                             <%end%>
                     </li>
-
                     <li>
-                        <a href="#" class="nav-link px-4 text-white"> * <span class="d-none d-sm-inline">Staff</span> </a>
+                        <a href="#" class="nav-link px-4 text-white"><span class="d-none d-sm-inline">Doctors</span></a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link px-4 text-white"> * <span class="d-none d-sm-inline">Doctors</span></a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link px-4 text-white"> * <span class="d-none d-sm-inline">Patients</span></a>
+                        <a href="#" class="nav-link px-4 text-white"><span class="d-none d-sm-inline">Patients</span></a>
                     </li>
                 </ul>
             </li>
@@ -53,11 +49,12 @@
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark text-small shadow">
                         <li class="w-100">
-                            <a href="#" class="nav-link dropdown-item   text-white"> Admins </a>
+                        
+                        <%= link_to users_path , class: "nav-link dropdown-item text-white"  do %>
+                            Staff
+                            <%end%>
                         </li>
-                        <li>
-                            <a href="#" class="nav-link dropdown-item  text-white"> Staff  </a>
-                        </li>
+                        
                         <li>
                             <a href="#" class="nav-link dropdown-item  text-white"> Doctors </a>
                         </li>
