--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin: 20px 0;
+ 
+}
