--- a/app/views/layouts/_users.html.erb
+++ b/app/views/layouts/_users.html.erb
@@ -1,12 +1,27 @@
+
+
 <div class="container-fluid">
   <div class="row flex-nowrap">
-    <!-- Render the sidebar partial -->
+    <!-- Sidebar on the left -->
     <%= render 'shared/sidebar' %>
-
-    <div class="col py-3">
-     
-      <%= yield %>
     
+    <!-- Main content on the right -->
+    <div class="col">
+      <!-- Custom responsive navbar at the top of the right side -->
+      <div class="d-flex flex-column flex-md-row align-items-center justify-content-between bg-light py-2 px-3 border-bottom position-sticky">
+        <h5 class="my-0 mr-md-auto font-weight-normal text-primary"><%= ActsAsTenant.current_tenant.name.capitalize %></h5>
+        
+        <!-- Updated search form using Bootstrap -->
+        <%= form_with url: search_path, method: :get, local: true, class: 'd-flex' do %>
+          <input class="form-control me-2" type="search" name="query" placeholder="Search" aria-label="Search" value="<%= params[:query] %>">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        <% end %>
+      </div>
+
+      <!-- Main content area below the custom navbar -->
+      <div class="content mt-3">
+        <%= yield %>
+      </div>
     </div>
   </div>
 </div>
