--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -5,22 +5,22 @@
           <%= @user.new_record? ? 'Create New User' : 'Edit User' %>
         </h1>
 
-      <%= form_with(model: @user,url: users_path ,local: true) do |f| %>
+     <%= form_with(model: @user, local: true) do |f| %>
         <%= render "devise/shared/error_messages", resource: @user %>
 
         <div class="form-group">
           <%= f.label :name, class: "form-label" %>
-          <%= f.text_field :name, class: "form-control", autofocus: true %>
+          <%= f.text_field :name, class: "form-control", autofocus: true,required: true %>
         </div>
 
         <div class="form-group">
           <%= f.label :email, class: "form-label" %>
-          <%= f.email_field :email, class: "form-control", autocomplete: "email" %>
+          <%= f.email_field :email, class: "form-control", autocomplete: "email" ,required: true%>
         </div>
 
         <div class="form-group">
           <%= f.label :password, class: "form-label" %>
-          <%= f.password_field :password, class: "form-control", autocomplete: "new-password" %>
+          <%= f.password_field :password, class: "form-control", autocomplete: "new-password" ,required: true%>
           <% if @minimum_password_length %>
             <br />
             <em><%= @minimum_password_length %> characters minimum</em>
@@ -29,21 +29,31 @@
 
         <div class="form-group">
           <%= f.label :password_confirmation, class: "form-label" %><br />
-          <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password" %>
+          <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password",required: true %>
         </div>
 
         <div class="form-group">
           <%= f.label :gender, class: "form-label" %>
-          <%= f.select :gender, options_for_select([['Male', 'male'], ['Female', 'female'], ['Other', 'other']]), {}, class: "form-control" %>
+          <%= f.select :gender, options_for_select([['Male', 'male'], ['Female', 'female']]), {}, class: "form-control" ,required: true%>
         </div>
 
         <!-- Role selection for admin and staff -->
-        <div class="form-group">
-          <%= f.label :role, class: "form-label" %>
-          <%= f.select :role, options_for_select([['Admin', 'admin'], ['Staff', 'staff']]), {}, class: "form-control" %>
-        </div>
+      <div class="form-group">
+        <%= f.label :role, class: "form-label" %>
+        
+       
+        
+        <% if can?(:create,User.new(role:'admin')) %>
+            <% role_options = [['Admin', 'admin'],['Staff', 'staff']] %>
+          <%else%>
+            <% role_options = [['Staff', 'staff']] %>
+          <%end%>
 
-        <div class="form-group text-center">
+        <%= f.select :role, options_for_select(role_options, f.object.role), { prompt: 'Select a role' }, class: "form-control",required: true %>
+      </div>
+
+
+        <div class="form-group text-center mt-4">
          <%= f.submit @user.new_record? ? 'Create User' : 'Update User', class: 'btn btn-primary btn-block' %>
         </div>
       <% end %>
