--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,11 +1,9 @@
-<div class="container-fluid">
-  <div class="row flex-nowrap">
-    <!-- Render the sidebar partial -->
-    <%= render 'shared/sidebar' %>
 
-    <!-- Main content area -->
+<%= render layout: "layouts/users" do %> 
+   
     <div class="col py-3 vh-100 overflow-auto">
       <%= render 'form', user: @user %>
     </div>
-  </div>
-</div>
+<%end%>
+
+
