--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -1,2 +1,34 @@
-<h1>Appointments#index</h1>
-<p>Find me in app/views/appointments/index.html.erb</p>
+<div class="container mt-5 text-center">
+  <h1>Appointments Calendar</h1>
+  <% if current_user.role == 'patient' %>
+    <div class="mb-3">
+      <%= link_to 'New Appointment', new_user_appointment_path(@user), class: 'btn btn-primary' %>
+    </div>
+  <% end %>
+  <%= month_calendar(events: @appointments) do |date, appointments| %>
+    <div class="day">
+      <%= date.day %>
+    </div>
+    <% appointments.each do |appointment| %>
+      <div class="card mt-2">
+        <div class="card-header">
+          
+        </div>
+        <div class="card-body">
+          <p class="card-text">
+             <%= link_to appointment.status, user_appointment_path(@user, appointment) %>
+     
+          </p>
+        </div>
+        <div class="card-footer">
+          <p class="card-text">
+            From: <%= appointment.startTime.strftime('%A, %B %d, %Y at %I:%M %p') %>
+          </p>
+          <p class="card-text">
+            To: <%= appointment.endTime.strftime('%A, %B %d, %Y at %I:%M %p') %>
+          </p>
+        </div>
+      </div>
+    <% end %>
+  <% end %>
+</div>
