--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="col-md-8 col-lg-6">
     <div class="bg-white p-4 rounded shadow-sm">
      <h1 class="text-center mb-4 text-primary">
-          <%= @patient.new_record? ? 'Create New Doctor' : 'Edit Doctor' %>
+          <%= @patient.new_record? ? 'Create New Patient' : 'Edit Patient' %>
         </h1>
       <%= form_with(model: @patient ,local: true) do |f| %>
         <%= render "devise/shared/error_messages", resource: @patient %>
@@ -31,10 +31,7 @@
           <%= f.select :gender, options_for_select([['Male', 'male'], ['Female', 'female'], ['Other', 'other']]), {}, class: "form-control" %>
         </div>
         <!-- Role selection for admin and staff -->
-        <div class="form-group">
-          <%= f.label :role, class: "form-label" %>
-          <%= f.select :role, options_for_select([['Patient', 'patient']]), {}, class: "form-control" %>
-        </div>
+        
         <div class="form-group text-center">
          <%= f.submit @patient.new_record? ? 'Create User' : 'Update User', class: 'btn btn-primary btn-block' %>
         </div>
