--- a/app/views/layouts/_users.html.erb
+++ b/app/views/layouts/_users.html.erb
@@ -1,5 +1,3 @@
-
-
 <div class="container-fluid">
   <div class="row flex-nowrap">
     <!-- Sidebar on the left -->
@@ -13,8 +11,10 @@
         
         <!-- Updated search form using Bootstrap -->
         <%= form_with url: search_path, method: :get, local: true, class: 'd-flex' do %>
-          <input class="form-control me-2" type="search" name="query" placeholder="Search" aria-label="Search" value="<%= params[:query] %>">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <input class="form-control me-2 mt-2" type="search" name="query" placeholder="Search" aria-label="Search" value="<%= params[:query] %>">
+          <button class="btn btn-outline-primary" type="submit">
+                  <i class="bi bi-search"></i>
+                </button>
         <% end %>
       </div>
 
