--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,27 +1,27 @@
 <%= render layout: "layouts/users" do %> 
       
 <!-- Flex container for header and button -->
-<div class="d-flex flex-row justify-content-between align-items-center mb-3 mt-5 border p-3">
+<div class="d-flex flex-row justify-content-between align-items-center  mb-3 mt-5 border p-3">
   <!-- Heading -->
-  <h3 class="text-primary mb-0">Admin and Staff</h3>
+  <h3 class="text-primary mb-0 fs-4 fs-md-6 ">Admin and Staff</h3>
   
   <!-- Button to create a new user -->
   <% if can?(:create, User.new(role: 'admin')) || can?(:create, User.new(role: 'staff')) %>
-    <%= link_to 'Add New User', new_user_path, class: 'btn btn-outline-primary' %>
+    <%= link_to 'Add New User', new_user_path, class: 'btn btn-outline-primary fs-6 fs-md-6 ' %>
   <% end %>
 </div>
 
 <!-- Users table -->
 <% if @users.any? %>
-  <div class="table-responsive mt-5">
-    <table class="table table-striped">
+  <div class="table-responsive mt-5 ">
+    <table class="table table-striped table-responsive overflow-auto ">
       <thead>
         <tr>
           <th>#</th>
           <th>Name</th>
           <th>Email</th>
           <th>Role</th>
-          <th>Actions</th>
+          <th class="text-center">Actions</th>
         </tr>
       </thead>
       <tbody>
@@ -31,7 +31,7 @@
             <td><%= user.name %></td>
             <td><%= user.email %></td>
             <td><%= user.role.capitalize %></td>
-            <td class="d-flex flex-row justify-content-around">
+            <td class="d-flex flex-row justify-content-evenly">
               <% if can?(:update, user) %>
                 <%= link_to edit_user_path(user), class: 'btn btn-outline-success btn-sm ' do %>
                   <i class="bi bi-pencil-square"></i> 
@@ -45,6 +45,60 @@
                   <i class="bi bi-trash"></i> 
                 <% end %>
               <% end %>
+
+             <% if can?(:read, user) %>
+                <button class="btn btn-outline-info btn-sm ml-3" data-bs-toggle="modal" data-bs-target="#showUserModal">
+                  <i class="bi bi-eye"></i> 
+                </button>
+              <% end %>
+              <div class="modal fade" id="showUserModal" tabindex="-1" aria-labelledby="showUserModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                  <div class="modal-content">
+                    <div class="modal-header bg-secondary text-light">
+                      <h5 class="modal-title" id="showUserModalLabel">User Profile</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                      <div class="card shadow-lg">
+                        <div class="card-body">
+                          <!-- Profile Picture Display -->
+                          <div class="text-center mb-3">
+                            <% if user.profile_picture.attached? %>
+                              <%= image_tag user.profile_picture, id: 'profile-picture-preview', class: 'rounded-circle shadow', size: '150x150' %>
+                            <% else %>
+                              <%= image_tag 'default-profile.jpeg', id: 'profile-picture-preview', class: 'rounded-circle shadow', size: '150x150' %>
+                            <% end %>
+                          </div>
+                          
+                          <!-- User Information Display -->
+                          <div class="mb-3">
+                            <h6 class="text-primary">Name:</h6>
+                            <p><%= user.name %></p>
+                          </div>
+
+                          <div class="mb-3">
+                            <h6 class="text-primary">Email:</h6>
+                            <p><%= user.email %></p>
+                          </div>
+
+                          <div class="mb-3">
+                            <h6 class="text-primary">Role:</h6>
+                            <p><%= user.role.capitalize %></p>
+                          </div>
+
+                          <div class="mb-3">
+                            <h6 class="text-primary">Gender:</h6>
+                            <p><%= user.gender.capitalize %></p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </td>
           </tr>
         <% end %>
@@ -52,7 +106,9 @@
     </table>
     
    
-    <%= will_paginate @collection, renderer: BootstrapPagination::Rails %>
+    <div class="position-absolute bottom-0 ">
+      <%= will_paginate @collection, renderer: BootstrapPagination::Rails %>
+      </div>
    
   </div>
 <% else %>
@@ -62,3 +118,11 @@
 <% end %>
 
 <% end %>
+
+
+
+
+
+
+
+
