--- a/app/views/medical_records/edit.html.erb
+++ b/app/views/medical_records/edit.html.erb
@@ -1,2 +1,1 @@
-<h1>MedicalRecords#edit</h1>
-<p>Find me in app/views/medical_records/edit.html.erb</p>
+<%= render "form", medical_record: @medical_record %>
