--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -1,19 +1,22 @@
 <div class="container d-flex justify-content-center mt-5 mb-5">
   <div class="col-md-8 col-lg-6">
     <div class="bg-white p-4 rounded shadow-sm">
-     <h1 class="text-center mb-4 text-primary">
-          <%= @patient.new_record? ? 'Create New Patient' : 'Edit Patient' %>
-        </h1>
-      <%= form_with(model: @patient ,local: true) do |f| %>
+      <h1 class="text-center mb-4 text-primary">
+        <%= @patient.new_record? ? 'Create New Patient' : 'Edit Patient' %>
+      </h1>
+      <%= form_with(model: @patient, local: true) do |f| %>
         <%= render "devise/shared/error_messages", resource: @patient %>
+        
         <div class="form-group">
           <%= f.label :name, class: "form-label" %>
           <%= f.text_field :name, class: "form-control", autofocus: true ,required: true %>
         </div>
+        
         <div class="form-group">
           <%= f.label :email, class: "form-label" %>
           <%= f.email_field :email, class: "form-control", autocomplete: "email",required: true  %>
         </div>
+        
         <div class="form-group">
           <%= f.label :password, class: "form-label" %>
           <%= f.password_field :password, class: "form-control", autocomplete: "new-password" ,required: true %>
@@ -22,18 +25,28 @@
             <em><%= @minimum_password_length %> characters minimum</em>
           <% end %>
         </div>
+        
         <div class="form-group">
           <%= f.label :password_confirmation, class: "form-label" %><br />
           <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password" ,required: true %>
         </div>
+        
         <div class="form-group">
           <%= f.label :gender, class: "form-label" %>
           <%= f.select :gender, options_for_select([['Male', 'male'], ['Female', 'female'], ['Other', 'other']]), {}, class: "form-control" ,required: true  %>
         </div>
-        <!-- Role selection for admin and staff -->
         
-        <div class="form-group text-center mt-4">
-         <%= f.submit @patient.new_record? ? 'Create User' : 'Update User', class: 'btn btn-primary btn-block' ,required: true  %>
+        <%= f.fields_for :detail do |detail_form| %>
+          <div class="form-group">
+            <%= detail_form.label :disease %>
+            <%= detail_form.text_field :disease, class: 'form-control' %>
+          </div>
+
+          
+        <% end %>
+
+        <div class="form-group text-center">
+          <%= f.submit @patient.new_record? ? 'Create Patient' : 'Update Patient', class: 'btn btn-primary btn-block' %>
         </div>
       <% end %>
     </div>
